--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
   },
   "homepage": "https://github.com/yufunz/react-appointment-tdd#readme",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
     "jest": "^29.5.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.22.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
