Migrate to Jest test doubles

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
       "IS_REACT_ACT_ENVIRONMENT": true
     },
     "setupFilesAfterEnv": [
-      "./test/domMatchers.js"
-    ]
+      "./test/domMatchers.js",
+      "./test/globals.js"
+    ],
+    "restoreMocks": true
   }
 }
